--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,7 @@
-<button [ngStyle]="{ 'background-color': color }" class="btn"
-(click)="onClick()"
+<button
+  [ngStyle]="{ 'background-color': color }"
+  class="btn"
+  (click)="onClick()"
 >
   {{ text }}
 </button>
